<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wu.messingaround.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@mipmap/background"
    android:orientation="vertical"
    android:gravity="center|top">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happy_question"
        android:textSize="20sp"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_yes_button"
            android:hint="@string/hint_pick_me"
            android:onClick="onYesButtonClick"
            android:id="@+id/answer_yes_button"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_no_button"
            android:hint="@string/hint_pick_me_no"
            android:onClick="onNoButtonClick"
            android:id="@+id/answer_no_button"
            />

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:hint="@string/users_name_edit_text"
                android:id="@+id/users_name_edit_text"
                />



        </LinearLayout>



</LinearLayout>
